--- a/client/src/component/table/CommonTable.css
+++ b/client/src/component/table/CommonTable.css
@@ -1,11 +1,12 @@
 .common-table{
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
-    text-align: center;
-    border-spacing: 0;
+    border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .common-table-header-column{
-    border-bottom: 1px solid #e8e8e8;
+    border-bottom: 1px solid black;
     padding: 0;
     font-size: 16px;
     padding: 10px 5px;
