--- a/client/src/pages/order/Order.css
+++ b/client/src/pages/order/Order.css
@@ -29,15 +29,8 @@ h1 {
   padding: 10px;
 }
 
-.order-content {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-}
-
 .order-items {
-  flex: 2;
-  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .order-item {
@@ -67,9 +60,92 @@ h1 {
   color: #888;
 }
 
+.order-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.order-form-summary {
+  display: flex;
+  justify-content: space-between;
+}
+
+.order-form {
+  flex: 2;
+}
+
+.form-section {
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.form-section legend {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.form-section-toggle {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-group label {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-group input {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+}
+
+.apply-coupon-button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.apply-coupon-button:hover {
+  background-color: #0056b3;
+}
+
+.next-button {
+  margin-top: 20px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.next-button:hover {
+  background-color: #0056b3;
+}
+
 .order-summary {
   flex: 1;
   text-align: right;
+  border-top: 1px solid #ddd;
+  padding-top: 20px;
 }
 
 .order-summary h2 {
@@ -77,8 +153,8 @@ h1 {
 }
 
 .order-summary p {
-  font-size: 1.2em;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  font-size: 1.1em;
 }
 
 .order-summary button {
@@ -87,6 +163,7 @@ h1 {
   color: #fff;
   border: none;
   cursor: pointer;
+  font-size: 1.1em;
 }
 
 .order-summary button:hover {
