--- a/client/src/pages/productManage/styles.css
+++ b/client/src/pages/productManage/styles.css
@@ -1,41 +1,14 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-}
-h2 {
+
+.product {
     text-align: center;
     margin: 20px 0;
     font-size: 24px;
 }
-
-table {
-    width: 100%;
-    margin: 0 auto;
-    border-collapse: collapse;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-thead {
-    background-color: #f5f5f5;
-}
-
-th, td {
+.th, td {
     padding: 15px;
     text-align: center;
     border-bottom: 1px solid black;
 }
-
-th {
-    font-weight: bold;
-}
-
-tr:hover {
-    background-color: #f1f1f1;
-}
-
 .notice-view-wrapper {
     width: 100%;
     margin: 20px auto;
@@ -84,8 +57,6 @@ tr:hover {
     cursor: pointer;
     
 }
-
-
 .form{
     display: flex;
     flex-direction: column;
