--- a/client/src/root.css
+++ b/client/src/root.css
@@ -1,19 +1,8 @@
-*,
-::after,
-::before,
-:after,
-:before {
-  box-sizing: border-box;
-  border-width: 0;
-  border-style: solid;
-  border-color: #7b7a7a;
-}
-
 :root {
   /* color */
   --c-bg-white: #ffffff; /*root 컬러 건들지마세요*/
   --c-darkgray: #757575;
-  --c-darkgray: #eeeeee;
+  --c-lightgray: #eeeeee;
   --c-black: #000000;
   --c-point: #ff5722;
 }
