--- a/client/src/pages/productManage/styles.css
+++ b/client/src/pages/productManage/styles.css
@@ -8,10 +8,13 @@
     --c-point: #ff5722;
   }
 .product {
-    background-color: var(--c-darkgray);
     text-align: center;
     margin: 20px 0;
     font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:10px;
 }
 .th{
     padding: 15px;
@@ -69,10 +72,19 @@
 .form{
     display: flex;
     flex-direction: column;
-    gap:20px
+    gap:20px;
+    text-align: center;
 }
 .product-input{
+    width:50%;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid black;
     border-radius: 5px;
+    text-align: center;
+}
+.addProduct{
+    text-align: center;
+}
+.updateUser{
+    text-align: center;
 }
