--- a/client/src/pages/order/Order.css
+++ b/client/src/pages/order/Order.css
@@ -131,33 +131,34 @@
 .apply-coupon-button {
   margin-left: 10px;
   padding: 5px 10px;
-  background-color: #007bff;
+  background-color: #ff5722;
   color: white;
   border: none;
   cursor: pointer;
 }
 
 .apply-coupon-button:hover {
-  background-color: #0056b3;
+  background-color: #e64a19;
 }
 
 .next-button {
   margin-top: 20px;
   padding: 5px 10px;
-  background-color: #007bff;
+  background-color: #ff5722;
   color: white;
   border: none;
   cursor: pointer;
 }
 
 .next-button:hover {
-  background-color: #0056b3;
+  background-color: #e64a19;
 }
 
 .order-summary {
   flex: 1;
   padding: 20px;
   border-radius: 5px;
+  font-size: 20px;
 }
 
 .order-summary h3 {
@@ -174,11 +175,13 @@
 
 .summary-total {
   color: red;
-  font-size: 1.2em;
+  font-size: 1.5em;
+
 }
 
 .terms {
   margin: 20px 0;
+  background-color:#e7e3e37e;
 }
 
 .terms label {
