--- a/client/src/pages/productManage/styles.css
+++ b/client/src/pages/productManage/styles.css
@@ -22,12 +22,12 @@
     border-bottom: 1px solid black;
 }
 .btn{
-    width: 100px;
-    padding: 10px 0;
-    color: white;
-    border: 1px solid black;
-    background-color: var(--c-point);
+    padding: 10px 20px;
+    background-color: #ff5722;
+    color: #fff;
+    border: 1px solid #000000;
     cursor: pointer;
+    font-size: 14px;
     
 }
 .form{
@@ -54,4 +54,11 @@
 }
 .tr{
     background-color: #757575;
+}
+.product-container{
+    width: 100%;
+    margin: 0 auto;
+    border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
