--- a/client/src/pages/mycoupon/mycoupon.css
+++ b/client/src/pages/mycoupon/mycoupon.css
@@ -7,12 +7,12 @@
 
 .mycoupon-container {
     width: 1140px;
-    height: 140px;
+    min-height: 100vh;
 }
 
 .mycoupon-title {
     width: 100%;
-    height: 100%;
+    height: 140px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,6 +77,7 @@
 
 .mycoupon-use {
     width: 25%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -113,6 +114,7 @@
 
 .mycoupon-download {
     width: 25%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
