--- a/client/src/pages/admin/adminSidebar/adminSidebar.css
+++ b/client/src/pages/admin/adminSidebar/adminSidebar.css
@@ -53,7 +53,7 @@
   display: flex;
   width: 100%;
   align-items: center;
-  padding: 9px 70px;
+  padding: 2px 70px;
   font-size: 16px;
   font-weight: 600;
   color: var(--c-darkgray);
@@ -89,8 +89,15 @@
   letter-spacing: 1.5px;
 }
 
-.topline {
-  border-top: 1px solid var(--c-darkgray);
+.sidebar-menu-line {
+  border-top: 1px solid var(--c-lightgray);
+  bottom: 0;
+  position: fixed;
+  width: 300px;
+}
+
+.sidebar-link {
+  text-decoration: none;
 }
 
 /*  */
