--- a/client/src/pages/notice/Notice.css
+++ b/client/src/pages/notice/Notice.css
@@ -1,4 +1,4 @@
-body {
+/* .body {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
     margin: 0;
@@ -51,4 +51,4 @@ h1 {
 
 .notice-table tr:hover {
     background-color: #f1f1f1;
-}
+} */
