--- a/client/src/pages/notice/Notice.css
+++ b/client/src/pages/notice/Notice.css
@@ -1,4 +1,4 @@
-/* .body {
+.noticebody {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
     margin: 0;
@@ -14,7 +14,7 @@
     border-radius: 8px;
 }
 
-h1 {
+.notice{
     text-align: center;
     margin-bottom: 20px;
     color: #333;
@@ -51,4 +51,4 @@ h1 {
 
 .notice-table tr:hover {
     background-color: #f1f1f1;
-} */
+}
