--- a/client/src/component/register/register.css
+++ b/client/src/component/register/register.css
@@ -18,6 +18,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-sizing: content-box;
 }
 
 .register-h1 {
@@ -44,12 +45,22 @@
     color: red;
 }
 
+.register-input-wrap {
+    width: 100%;
+}
+
 .register-input {
-    width: 80%;
+    width: 100%;
     height: 34px;
     border: 1px solid #eee;
     font-size: 12px;
     padding: 0px 10px;
+}
+
+.register-input-error {
+    color: red;
+    font-size: 10px;
+    padding: 2px;
 }
 
 .register-agreement {
