--- a/client/src/pages/admin/adminHeader/adminHeader.css
+++ b/client/src/pages/admin/adminHeader/adminHeader.css
@@ -1,63 +1,24 @@
 @import url("../../../root.css");
 
 .header-container {
-  width: calc(100%-300px);
+  width: 100vw;
   height: 70px;
-  margin-left: 300px;
-  padding-left: 20px;
   position: relative;
   overflow: hidden;
   background: var(--c-bg-white);
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   /* border-bottom: 2px solid var(--c-lightgray); */
   z-index: 1;
-  justify-content: end;
 }
-
-/* .header-search {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex: 5;
-}
-
-.header-search-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 500px;
-  height: 40px;
-}
-
-.header-search-icon-box {
-  position: relative;
-  left: 50px;
-  padding-right: 10px;
-  color: var(--c-black);
-}
-
-.header-search-input {
-  width: 100%;
-  font-size: 16px;
-  text-align: left;
-  background-color: #f0f0f0;
-  color: var(--c-black);
-  letter-spacing: 1px;
-  border-radius: 5px;
-  padding: 10px 50px;
-}
-
-.header-search-text:focus {
-  outline: 2px solid var(--c-darkgray);
-} */
 
 .header-profile {
+  margin-right: 50px;
+  width: 100px;
   display: flex;
   align-items: center;
-  margin-right: 55px;
-  /* justify-content: end; */
+  margin-left: auto;
 }
 
 .header-profile-icon {
