--- a/client/src/pages/admin/dashboard/dashboard.css
+++ b/client/src/pages/admin/dashboard/dashboard.css
@@ -1,8 +1,8 @@
 @import url("../../../root.css");
 
-.dashboard-container {
+.admin-dashboard-wrapper {
   display: flex;
-  /* background-color: var(--c-lightgray); */
+  background-color: var(--c-lightgray);
 }
 
 .dashboard-main-content {
@@ -13,7 +13,7 @@
   padding: 20px;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-color: var(--c-lightgray);
+  /* background-color: var(--c-lightgray); */
 }
 
 /* 카드 1 */
