--- a/client/src/pages/productManage/Notice.css
+++ b/client/src/pages/productManage/Notice.css
@@ -5,8 +5,8 @@
     padding: 0;
 }
 
-.container {
-    width: 80%;
+.product-container {
+    width: 50%;
     margin: 20px auto;
     background-color: #fff;
     padding: 20px;
