login, register, profile, myreview  수정

--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -73,6 +73,14 @@
     padding: 0px 10px;
 }
 
+.profile-input-readonly {
+    width: 420px;
+    height: 34px;
+    border: none;
+    font-size: 12px;
+    padding: 0px 10px;
+}
+
 .profile-pwd-input {
     width: 270px;
     height: 34px;
