--- a/client/src/component/register/register.css
+++ b/client/src/component/register/register.css
@@ -11,7 +11,7 @@
 
 .register-container {
     width: 380px;
-    height: 480px;
+    min-height: 480px;
     padding: 40px 30px;
     background-color: white;
     display: flex;
@@ -57,10 +57,18 @@
     padding: 0px 10px;
 }
 
+.register-input-red {
+    width: 100%;
+    height: 34px;
+    border: 1px solid red;
+    font-size: 12px;
+    padding: 0px 10px;
+}
+
 .register-input-error {
     color: red;
     font-size: 10px;
-    padding: 2px;
+    padding: 5px;
 }
 
 .register-agreement {
