--- a/client/src/pages/admin/orderManage/orderManage.css
+++ b/client/src/pages/admin/orderManage/orderManage.css
@@ -1,5 +1,24 @@
 @import url("../../../root.css");
 
+.orderManage-wrapper form,
+.orderManage-wrapper fieldset,
+.orderManage-wrapper legend,
+.orderManage-wrapper input,
+.orderManage-wrapper textarea,
+.orderManage-wrapper select
+/* .orderManage-wrapper button  */
+{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
+  background: transparent;
+  box-sizing: border-box;
+}
+
 .orderManage-wrapper {
   width: 100vw;
   height: 100vh;
@@ -8,54 +27,175 @@
   flex-direction: column;
 }
 
-.orderManage-main-content {
+.orderManage-content-wrapper {
   display: flex;
   width: calc(100% - 300px);
-  border: 5px solid var(--c-black);
+  /* border: 5px solid var(--c-black); */
   height: 100%;
   margin-left: 300px;
-  padding: 30px;
+  padding: 20px;
   flex-direction: column;
   /* justify-content: space-around; */
 }
 
-.orderManage-title {
-  font-size: 28px;
-  font-weight: 700;
-  margin-bottom: 30px;
+.orderManage-header {
+  width: 100%;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-bottom: 10px;
 }
 
-.orderManage-select-cate-container {
+.orderManage-title {
+  display: flex;
+  width: auto;
+  height: inherit;
+  font-size: 18px;
+  font-weight: bolder;
+  align-items: center;
+  justify-content: center;
+  /* margin-bottom: 10px; */
+}
+
+.orderManage-select-container {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  font-size: 11px;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: white;
+  margin-bottom: 10px;
+  border: 1px solid var(--c-lightgray);
+  box-shadow: 0 0 1px 0 var(--c-darkgray);
 }
 
-.orderManage-search-input {
-  width: 300px;
+.orderManage-select-box {
+  display: flex;
+  height: 25px;
+  align-items: center;
+  border-bottom: 1px solid var(--c-lightgray);
+}
+
+.orderManage-select-label {
+  display: flex;
+  height: 100%;
+  width: 70px;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  color: var(--c-bg-white);
+  background-color: var(--c-darkgray);
+}
+
+.orderManage-select-item {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.orderManage-orderNumber-search-input {
+  width: 200px;
   border: 1px solid black;
+  font-size: 11px;
+  padding: 3px 6px;
+  margin-right: 10px;
+}
+
+.orderManage-select-item > label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
+}
+.orderManage-search-btn {
+  width: 40px;
+  cursor: pointer;
+  height: 20px;
+  border: 1px solid var(--c-darkgray);
+  box-shadow: 1px 1px 1px 1px var();
+  background-color: var(--c-lightgray);
+}
+
+.orderManage-search-btn:active {
+  background-color: var(--c-darkgray);
+  color: var(--c-bg-white);
+  border: 1px solid var(--c-darkgray);
+  box-shadow: 1px 1px 1px 1px var();
+}
+
+.orderManage-check {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.orderManage-table-container {
+  width: 100%;
+  height: 200px;
+  padding: 10px 25px;
+  background-color: var(--c-bg-white);
+}
+
+.orderManage-table-summary {
+  padding: 5px;
   font-size: 13px;
-  padding: 6px 5px;
+  color: var(--c-black);
 }
 
 .orderManage-table {
-  border: 1px solid black;
+  width: 100%;
+  border: 2px solid var(--c-black);
   border-collapse: collapse;
+  background-color: var(--c-bg-white);
+  /* padding: 30px; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  flex-direction: column;
+  height: 150px;
 }
 
 .orderManage-table th,
 .orderManage-table td {
-  border: 1px solid black;
-  border-collapse: collapse;
-  height: 50px;
+  border: 1px solid var(--c-black);
+  height: 30px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  /* display: table-cell; */
+  /* vertical-align: middle; */
+}
+
+.orderManage-table tr {
+  /* flex-grow: 1; */
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
+
+  /* justify-content:flex-start; */
+
+  /* display: table-row; */
 }
 
 .orderManage-table-head {
-  font-size: 15px;
+  font-size: 11px;
+  background-color: var(--c-darkgray);
+  color: var(--c-bg-white);
+  border-bottom: 1px solid var(--c-black);
+  height: 30px;
 }
 
 .orderManage-table-body {
-  font-size: 13px;
-  text-align: start;
+  font-size: 11px;
   padding-left: 5px;
+  height: 20px;
+
+  /* vertical-align: top; */
+  /* display: table-row-group; */
 }
