--- a/client/src/pages/review/ReviewWrite.css
+++ b/client/src/pages/review/ReviewWrite.css
@@ -57,17 +57,21 @@
 }
 
 .review-modal-rating {
+ 
   margin-bottom: 20px;
   font-size: 20px;
   font-weight: bold;
+  display: flex;
+  flex-direction: column;
+ align-items: center;
 }
 
 .modal-rating-stars {
-  display: flex;
+  align-items: center;
 }
 
 .star {
-  font-size: 24px;
+  font-size: 40px;
   cursor: pointer;
   margin-right: 5px;
   color: #9e9b9b;
@@ -75,13 +79,13 @@
 
 .star:hover,
 .star:hover ~ .star {
-  font-size: 24px;
+  font-size: 40px;
   margin-right: 5px;
   color: gold;
 }
 
 .star-filled {
-  font-size: 24px;
+  font-size: 40px;
   margin-right: 5px;
   color: gold;
 }
