--- a/client/src/pages/product/sanrio/sanproductsection/sanproductsection.css
+++ b/client/src/pages/product/sanrio/sanproductsection/sanproductsection.css
@@ -1,24 +1,23 @@
 .product-section {
-  margin-bottom: 50px;
+  margin: 50px 0;
 }
 
 .product-list {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
-  gap: 20px;
+  justify-content: space-around;
 }
 
 .product-card {
-  width: 200px;
-  height: 300px;
+  width: 360px;
+  height: 360px;
   border: 1px solid #ddd;
   border-radius: 10px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
-  cursor: pointer;
+  margin: 10px;
   transition: transform 0.2s;
 }
 
@@ -27,12 +26,13 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.product-name {
-  margin-top: 10px;
-  font-size: 16px;
+.product-image {
+  width: 100%;
+  height: auto;
+  max-height: 280px; /* 이미지의 최대 높이 설정 */
+  object-fit: cover;
 }
 
-.product-price {
-  margin-top: 5px;
-  color: #888;
+.product-name, .product-price {
+  margin: 10px 0;
 }
