--- a/client/src/pages/productManage/product.css
+++ b/client/src/pages/productManage/product.css
@@ -14,6 +14,8 @@
     border-bottom: 1px solid black;
     text-align: left;
     border: 1px solid black;
+    background-color: #757575;
+    color: #fff;
 }
 .btn{
     padding: 10px 20px;
