--- a/client/src/pages/admin/adminSidebar/adminSidebar.css
+++ b/client/src/pages/admin/adminSidebar/adminSidebar.css
@@ -1,5 +1,21 @@
 @import url("../../../root.css");
 
+/* @media (max-width: 768px) {
+  .sidebar-wrapper {
+    width: 80px; 
+  }
+
+  .sidebar-logo-text, .sidebar-menu-text {
+    display: none;
+  }
+  
+  .sidebar-menu-icon {
+    display: flex;
+    margin-right: 0;
+    justify-content: center;
+  }
+} */
+
 .sidebar-wrapper {
   width: 300px;
   height: 100vh;
@@ -15,7 +31,7 @@
 .sidebar-logo-box {
   width: 100%;
   display: flex;
-  font-size: 36px;
+  font-size: 30px;
   font-weight: 600;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -30,12 +46,12 @@
   font-weight: bolder;
 }
 
-.sidebar-logo-icon {
+/* .sidebar-logo-icon {
   display: flex;
   margin-right: 16px;
   font-weight: bolder;
   color: var(--c-darkgray);
-}
+} */
 
 /* 사이드바 메뉴 */
 .sidebar-hidden-text {
