--- a/client/src/pages/userManage/Modal.css
+++ b/client/src/pages/userManage/Modal.css
@@ -18,12 +18,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: rgba(67, 63, 63, 0.5);
   }
   
   .modal-content {
     background-color: #ffffff;
-    width: 400px;
+    width: 300px;
     height: 400px;
     padding: 15px;
-    border: 1px solid #000000;
+    border-radius: 10%;
   }
